--- a/templates/style.css
+++ b/templates/style.css
@@ -97,7 +97,7 @@ h1, h2, h3, p{
     width: 100%;
     height: 550px;
     border-radius: 10px;
-    background: url('/img/showcase2.webp') no-repeat center center/cover;
+    background: url('./img/showcase2.webp') no-repeat center center/cover;
     padding-bottom: 50px;
     margin-bottom: 35px;
     box-shadow: 0px 3px 5px #a8a8a8;
